--- a/bibleajax.html
+++ b/bibleajax.html
@@ -73,7 +73,7 @@ function getresponse () {
 
 </script>
 
-<body>
+<body style="background-color:antiquewhite">
 <h1>Bible Search Test Form</h1>
 <h3>Select which type of search you would like to perform:</h3>
 <table>
